# PrintSpool

./: .babelrc.js  .drone.yml  .env  .env.local-build  .env.production  .eslintrc.js  .gitattributes  .gitignore  CHANGELOG.md  Cakefile  Cargo.toml  HACKING.md  LICENSE.md  README.md  Vagrantfile  babel.config.js  construct-daemon.service  development.config.js  gulpfile.babel.js  jest.config.js  lerna.json  machine.default.toml  netlify.toml  package.json  provision_vagrant.sh  start-host.sh  tegh-daemon.service  webpack.config.babel.js
crates/auth/: Cargo.toml
crates/auth/src/: auth_context.rs  create_signalling_jwt.rs  lib.rs  server_keys.rs  signal.rs  watch_pem_keys.rs
crates/auth/src/data_channel/: mod.rs
crates/auth/src/invite/: configurable_invite.rs  consume_invite.rs  into_config_form.rs  invite.rs  invite_code.rs  invite_config.rs  mod.rs
crates/auth/src/user/: authenticate.rs  configurable_user.rs  into_config_form.rs  jwt.rs  mod.rs  query_resolvers.rs  user.rs  user_config.rs  user_resolvers.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  paths.rs
crates/config_form/: Cargo.toml
crates/config_form/src/: config_form.rs  configurable.rs  into_config_form.rs  lib.rs  model.rs
crates/cura-profile-merge/: Cargo.toml  README.md
crates/cura-profile-merge/src/: main.rs  quality_config.rs  to_json.rs
crates/data_channel/: Cargo.toml
crates/data_channel/src/: client_ws.rs  lib.rs  open_data_channel.rs  saltyrtc_chunk.rs
crates/data_channel/src/iter/: identify_first_last.rs  mod.rs
crates/device/: Cargo.toml
crates/device/src/: device.rs  device_manager.rs  lib.rs
crates/device/src/messages/: add_device.rs  add_device_handler.rs  get_devices.rs  mod.rs  remove_device.rs  remove_device_directory.rs
crates/device/src/resolvers/: devices_query_resolvers.rs  mod.rs  query_resolvers.rs
crates/device/src/watchers/: block_on_serial_directory_create.rs  mod.rs  watch_device_directory.rs
crates/driver-interface/: Cargo.toml
crates/driver-interface/src/: capability.rs  component.rs  db_id.rs  deletion.rs  driver.rs  driver_instance.rs  lib.rs  machine.rs  material.rs  sensor.rs  task.rs
crates/driver-interface/src/capability/: actuator.rs  camera.rs  extruder.rs  fan.rs  heater.rs
crates/driver-interface/src/component/: components.rs  config.rs  serialization.rs  type_descriptor.rs
crates/driver-interface/src/machine/: core_config.rs  gcode_history_entry.rs  machine_hooks.rs  positioning_units.rs  serialization.rs  state.rs  status.rs
crates/driver-interface/src/material/: configurable_material.rs
crates/driver-interface/src/task/: task.rs  task_indexes.rs  task_resolvers.rs  task_status.rs  task_status_key.rs
crates/json-store/: Cargo.toml
crates/json-store/src/: lib.rs  record.rs  saved_record.rs  unsaved_record.rs
crates/machine/: .env  Cargo.toml  sqlx-data.json
crates/machine/migrations/: 20201222051430_init.sql  20210314225352_default_materials.sql
crates/machine/src/: lib.rs  machine_material_hooks.rs
crates/machine/src/components/: axis.rs  build_platform.rs  component_inner.rs  configurable_component.rs  controller.rs  heater.rs  into_config_form.rs  mod.rs  resolvers.rs  speed_controller.rs  toolhead.rs  video.rs
crates/machine/src/config/: combined_config_view.rs  config.rs  into_config_form.rs  machine_config.rs  mod.rs  validate_model.rs
crates/machine/src/config_form/: from_component.rs  mod.rs
crates/machine/src/machine/: machine.rs  machine_hooks.rs  machine_status.rs  machine_viewer.rs  mod.rs  send_message.rs
crates/machine/src/plugins/: configurable_plugin.rs  core.rs  mod.rs  (+2 more)
crates/macros/: Cargo.toml
crates/macros/printspool-macros/: Cargo.toml
crates/macros/src/: compile_internal_macro.rs  json_gcode.rs  lib.rs
crates/marlin/: .env  Cargo.toml  babel.config.js  package.json
crates/marlin/docs/: serial_communication.md
crates/marlin/src/: lib.rs  main.rs  protobuf_server.rs  serial_manager.rs
crates/material/: Cargo.toml
crates/material/src/: configurable_material.rs  into_config_form.rs  lib.rs  material.rs  material_hooks.rs  resolvers.rs
crates/pi-benchmarks/: Cargo.toml  README.md
crates/pi-benchmarks/benches/: gcode_stress_test.rs
crates/print-queue/: Cargo.toml
crates/print-queue/benches/: compile_print_file.rs  compile_print_file_bench.rs
crates/print-queue/src/: insert_print.rs  lib.rs  machine_print_queue.rs  print_queue.rs  print_queue_machine_hooks.rs  print_queue_resolvers.rs  query_resolvers.rs  task_from_gcodes.rs
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: define_component.rs  foreign_key.rs  inline_compiler_error.rs  lib.rs  printspool_collection.rs
crates/protobufs/: Cargo.toml  build.rs
crates/protobufs/protos/: CombinatorMessage.proto  InviteCode.proto  MachineMessage.proto  ServerMessage.proto
crates/protobufs/src/: lib.rs  machine_flags.rs
crates/server/: .env  Cargo.toml  sqlx-data.json
crates/server/migrations/: 20201222051430_init.sql  20210314225352_default_materials.sql  20210429192005_starred_packages.sql  20211222003352_servers.sql
crates/server/src/: create_db.rs  health_check_socket.rs  lib.rs  local_http_server.rs  main.rs  mutation.rs  query.rs  resolvers.rs  server.rs  server_query.rs  server_subscription_resolvers.rs
crates/supervisor/: .env  Cargo.toml
crates/supervisor/src/: main.rs
drivers/klipper-code-gen/: Cargo.toml  README.md
drivers/klipper-code-gen/src/: main.rs  parser.rs
drivers/klipper-driver/: Cargo.toml
drivers/klipper-driver/src/: components.rs  klipper_component.rs  klipper_driver.rs  klipper_driver_instance.rs  klipper_machine.rs  klipper_socket.rs  lib.rs
drivers/klipper-plugin/: Cargo.toml
drivers/klipper-plugin/src/: klipper_component.rs
frontend/slicer-render/: .gitignore  Cargo.toml  README.md  publish.sh  start.sh
frontend/slicer-render/example/: index.html  index.js  package.json
frontend/slicer-render/src/: cad_bounding_box.rs  cad_orbit_control.rs  camera_control.rs  camera_position.rs  export_stl.rs  gcode_preview.rs  lib.rs  main.rs  model_preview.rs
(+811 files in other folders)
