[package]
name = "teg_auth"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

[lib]
name = "teg_auth"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teg-json-store = { path = "../json-store" }
teg-protobufs = { path = "../protobufs" }
teg_config_form = { path = "../config_form" }
teg-common = { path = "../common" }

serde_json = { version = "1.0.44", features = ["raw_value"] }
async-graphql = { git = "https://github.com/D1plo1d/async-graphql.git", branch="feature/websocket-file-uploads", features = ["apollo_tracing", "tracing",  "chrono", "url", "unblock"] }
async-trait = "0.1.36"
eyre = "0.6.5"
frank_jwt = "3.1.2"
schemars = "0.8.0"
sqlx = { version = "=0.5.5", features = [ "runtime-async-std-native-tls", "postgres", "offline", "json", "macros" , "chrono"] }

tracing = "0.1.28"
tracing-futures = "0.2.4"
rmp = "^0.8"
hex = "0.4.2"
data-encoding = "2.3.1"
qr2term = "0.2.1"
rmp-serde = "0.15.0"
toml = "0.5.8"
gravatar = "0.2.0"
url = "2.2.0"
surf = "2.1.0"
arc-swap = "1.1.0"

datachannel = { version = "0.5.1", features = [ "static" ] }
# datachannel = { git = "https://github.com/lerouxrgd/datachannel-rs.git", branch = "static-openssl", features = [ "static" ] }

async-tungstenite = { version = "0.11.0", features = ["async-std-runtime", "async-native-tls"] }
futures-util = "0.3.8"
nanoid = "0.3.0"
bs58 = "0.4.0"
sha2 = "0.9.3"
rand_core = "0.6.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dependencies.async-std]
features = ["tokio02", "unstable"]
version = "1.6.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"

[dependencies.openssl]
features = ["vendored"]
version = "0.10.28"
