[package]
name = "teg_config_form"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

[lib]
name = "teg_config_form"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.44", features = ["raw_value"] }
async-graphql = "2.2.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.104"
