[package]
name = "cura-profile-merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
lazy_static = "1.4.0"
config = { git = "https://github.com/mehcode/config-rs.git" }

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]
