[package]
name = "teg_data_channel"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

[lib]
name = "teg_data_channel"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teg_machine = { path = "../machine" }
teg_auth = { path = "../auth" }

serde_json = { version = "1.0.44", features = ["raw_value"] }
async-graphql = { version = "2.8.4", features = ["apollo_tracing", "tracing",  "chrono", "url"] }
eyre = "0.6.5"
derive-new = "0.5.8"
frank_jwt = "3.1.2"
schemars = "0.8.0"
sqlx = { version = "=0.5.1", features = [ "runtime-async-std-native-tls", "sqlite", "offline", "json", "macros" ] }
tracing = "0.1.25"
rmp = "^0.8"
hex = "0.4.2"
data-encoding = "2.3.1"
qr2term = "0.2.1"
rmp-serde = "0.15.0"
toml = "0.5.8"
gravatar = "0.2.0"
url = "2.2.0"
surf = "2.1.0"
arc-swap = "1.1.0"
pin-project = "1.0.6"
tempfile = "3.2.0"

datachannel = { version = "0.5.1", features = [ "static" ] }
# datachannel = { git = "https://github.com/lerouxrgd/datachannel-rs.git", branch = "static-openssl", features = [ "static" ] }

async-tungstenite = { version = "0.11.0", features = ["async-std-runtime", "async-native-tls"] }
futures-util = "0.3.8"
bytes = "0.5.6"
async-codec = "0.4.0"
dashmap = "4.0.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dependencies.async-std]
features = ["tokio02", "unstable"]
version = "1.8.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"
