[package]
name = "teg_device"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

[lib]
name = "teg_device"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teg_machine = { path = "../machine" }

eyre = "0.6.5"
serde_json = { version = "1.0.44", features = ["raw_value"] }
async-graphql = { git = "https://github.com/async-graphql/async-graphql.git" }
xactor = { git = "https://github.com/D1plo1d/xactor.git", branch = "eyre-feature",  default-features = false, features = ["runtime-async-std", "eyre"] }
notify = "5.0.0-pre.2"
async-trait = "0.1.36"
tracing = "0.1.19"
tracing-futures = "0.2.4"

[dependencies.async-std]
features = ["tokio02", "unstable"]
version = "1.6.3"
