[package]
name = "printspool-driver-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.0"
validator = { version = "0.12.0", features = ["derive"] }
erased-serde = "0.3.24"
dyn-clonable = "0.9.0"
derive_more = "0.99.17"
once_cell = "1.17.0"
serde_json = "1.0.91"
eyre = "0.6.8"
chrono = "0.4.23"
async-trait = "0.1.63"
bonsaidb = { version = "0.4.1", features = ["client", "server"] }

[dependencies.serde]
features = ["derive"]
version = "1.0.123"
