[package]
name = "printspool-driver-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.0"
validator = { version = "0.12.0", features = ["derive"] }
erased-serde = "0.3.24"
dyn-clonable = "0.9.0"
once_cell = "1.17.0"
serde_json = "1.0.91"
eyre = "0.6.8"
chrono = "0.4.23"
async-trait = "0.1.63"
bonsaidb = { git="https://github.com/khonsulabs/bonsaidb.git", features = ["client", "server"] }
rand = "0.8.5"
derive-new = "0.5.9"
async-graphql = { version = "5.0.5", features = ["dataloader"] }
derive_more = "0.99.17"
bs58 = "0.4.0"
printspool_config_form = { path = "../config_form" }
printspool-protobufs = { path = "../protobufs" }
printspool-proc-macros = { path = "../proc-macros" }
dashmap = "5.4.0"
tracing = "0.1.37"
tracing-futures = "0.2.5"
tokio = "1.25.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"
