[package]
name = "teg-json-store"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

[lib]
name = "teg_json_store"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "sqlite", "offline", "json", "macros", "chrono" ] }
anyhow = "1.0"
async-trait = "0.1.36"
serde_json = { version = "1.0.44", features = ["raw_value"] }

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"

[dependencies.serde]
features = ["derive"]
version = "1.0.104"
