[package]
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"
name = "teg_machine"
version = "0.1.0"

[lib]
name = "teg_machine"
path = "src/lib.rs"

[dependencies]
teg_config_form = { path = "../config_form" }
teg_material = { path = "../material" }
teg_auth = { path = "../auth" }
teg-json-store = { path = "../json-store" }
teg-common = { path = "../common"}

eyre = "0.6.5"
async-graphql = { git = "https://github.com/async-graphql/async-graphql.git" }
# async-graphql-warp = { path = "../../../async-graphql/async-graphql-warp" }
# async-graphql = { path = "../../../async-graphql" }
futures = "0.3.5"
serde_json = { version = "1.0.44", features = ["raw_value"] }
toml = "0.5.8"
async-trait = "0.1.36"
derive-new = "0.5.8"
teg-protobufs = { path= "../protobufs" }
bytes = "0.5.6"
arc-swap = "1.1.0"
tracing = "0.1.19"
tracing-futures = "0.2.4"
xactor = { git = "https://github.com/D1plo1d/xactor.git", branch = "eyre-feature",  default-features = false, features = ["runtime-async-std", "eyre"] }
async-codec = "0.4.0"
sqlx = { version = "0.5.1", features = [ "runtime-async-std-native-tls", "sqlite", "offline", "json", "macros", "chrono" ] }
rand = "0.7.3"
smart-default = "0.6.0"
schemars = "0.8.0"
# jsonschema = "0.4.3"
nanoid = "0.3.0"
surf = "2.1.0"
validator = { version = "0.12.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.4.3"

[dependencies.async-std]
features = ["tokio02", "unstable"]
version = "1.6.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"
