[package]
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"
name = "printspool_machine"
version = "0.1.0"

[lib]
name = "printspool_machine"
path = "src/lib.rs"

[dependencies]
printspool_config_form = { path = "../config_form" }
printspool_material = { path = "../material" }
printspool_auth = { path = "../auth" }
printspool-json-store = { path = "../json-store" }
printspool-common = { path = "../common"}

eyre = "0.6.5"
async-graphql = { git = "https://github.com/D1plo1d/async-graphql.git", branch="feature/websocket-file-uploads", features = ["apollo_tracing", "tracing",  "chrono", "url", "unblock"] }
# async-graphql-warp = { path = "../../../async-graphql/async-graphql-warp" }
# async-graphql = { path = "../../../async-graphql" }
futures = "0.3.5"
serde_json = { version = "1.0.44", features = ["raw_value"] }
toml = "0.5.8"
async-trait = "0.1.36"
derive-new = "0.5.8"
printspool-protobufs = { path= "../protobufs" }
bytes = "1.1.0"
base64 = "0.12.3"
arc-swap = "1.1.0"
tracing = "0.1.28"
tracing-futures = "0.2.4"
xactor = { git = "https://github.com/sunli829/xactor.git", branch = "master",  default-features = false, features = ["runtime-async-std", "eyre"] }
# async-codec = "0.4.0"
async-codec = { git = "https://gitlab.com/d1plo1d/async-codec.git", branch = "feature/bytes_1_x_x" }

sqlx = { version = "=0.5.9", features = [ "runtime-async-std-native-tls", "postgres", "offline", "json", "macros" , "chrono"], git="https://github.com/D1plo1d/sqlx.git", branch="fix/pgpass" }

rand = "0.7.3"
smart-default = "0.6.0"
schemars = "0.8.0"
# jsonschema = "0.4.3"
nanoid = "0.3.0"
surf = "2.1.0"
validator = { version = "0.12.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.4.3"
pidfile-rs = { git = "https://github.com/D1plo1d/bsd-pidfile-rs.git", branch = "fix/cross-compilation" }
nix = "0.20.0"
bonsaidb = "0.4.1"

[dependencies.async-std]
features = ["tokio02", "unstable"]
version = "1.6.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"
