[package]
name = "teg-marlin"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"
description = "Teg serial driver for RepRaps and Marlin-compatible firmware"

[profile.release]
# Enabling debugging symbols for perf.
# See: https://cesarvr.io/post/rust-performance/
debug=true

[dependencies]
teg-json-store = { path = "../json-store" }
teg_machine = { path = "../machine" }

bytes = "0.5.4"
tokio = { version = "0.2.25", features = ["full"] }
tokio-util = { version = "0.3.1", features=["codec"] }
tokio-serial = { version = "4.3.3", default-features = false }
# tokio-serial = { path = "../../../tokio-serial"}
futures = { version = "0.3.5", features=["compat"] }
mio = "0.6.22"
tempfile = "3.1.0"
bus_queue = "0.5.3"
fallible-iterator = "0.2.0"
chrono = "0.4.9"
toml = "0.5.8"
serde = { version = "1.0.101", features = ["derive"] }
nom-gcode = "0.1.0"
nom-reprap-response = { path= "../nom-reprap-response" }
teg-protobufs = { path= "../protobufs" }
spin_sleep = "0.3.7"
error-chain = "0.12.2"
tracing = "0.1.25"
tracing-subscriber = "0.2.15"
eyre = "0.6.5"
color-eyre = "0.5.10"
dotenv = "0.15.0"
nom = "6.0.0-alpha.1"
serde_json = "1.0.57"
rand = "0.8.3"
nix = "0.20.0"
pidfile-rs = { git = "https://github.com/D1plo1d/bsd-pidfile-rs.git", branch = "fix/cross-compilation" }
