[package]
name = "teg_material"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

[lib]
name = "teg_material"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teg_config_form = { path = "../config_form" }
teg_auth = { path = "../auth" }
teg-json-store = { path = "../json-store" }

sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "sqlite", "offline", "json", "macros" ] }
schemars = "0.8.0"
eyre = "0.6.5"
serde_json = { version = "1.0.44", features = ["raw_value"] }
async-graphql = { git = "https://github.com/async-graphql/async-graphql.git" }
nanoid = "0.3.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"
