[package]
name = "teg_material"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

[lib]
name = "teg_material"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teg_config_form = { path = "../config_form" }
teg_auth = { path = "../auth" }
teg-json-store = { path = "../json-store" }
teg-common = { path = "../common"}

sqlx = { version = "=0.5.5", features = [ "runtime-async-std-native-tls", "postgres", "offline", "json", "macros" , "chrono"] }

schemars = "0.8.0"
eyre = "0.6.5"
serde_json = { version = "1.0.44", features = ["raw_value"] }
async-graphql = { git = "https://github.com/D1plo1d/async-graphql.git", branch="feature/websocket-file-uploads", features = ["apollo_tracing", "tracing",  "chrono", "url", "unblock"] }
nanoid = "0.3.0"
async-trait = "0.1.36"
tracing = "0.1.28"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"
