[package]
name = "teg-print-queue"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

[lib]
name = "teg_print_queue"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teg_machine = { path = "../machine" }
teg-macros = { path = "../macros" }
teg_auth = { path = "../auth" }
teg_data_channel = { path = "../data_channel" }
teg-json-store = { path = "../json-store" }

serde_json = { version = "1.0.44", features = ["raw_value"] }
async-graphql = { git = "https://github.com/async-graphql/async-graphql.git" }
anyhow = "1.0"
derive-new = "0.5.8"
sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "sqlite", "offline", "json", "macros" ] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
arc-swap = "1.1.0"
xactor = "0.7.11"
async-trait = "0.1.36"
futures = "0.3.12"
nanoid = "0.3.0"
nom-gcode = "0.1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.104"

[dependencies.async-std]
features = ["tokio02", "unstable"]
version = "1.8.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"
