[package]
name = "teg-print-queue"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

[lib]
name = "teg_print_queue"
path = "src/lib.rs"

[[bench]]
name = "compile_print_file_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.3.3", features = ["async_std"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teg_machine = { path = "../machine" }
teg-macros = { path = "../macros" }
teg_auth = { path = "../auth" }
teg_data_channel = { path = "../data_channel" }
teg-json-store = { path = "../json-store" }
teg-common = { path = "../common" }

serde_json = { version = "1.0.44", features = ["raw_value"] }
async-graphql = { git = "https://github.com/D1plo1d/async-graphql.git", branch="feature/websocket-file-uploads", features = ["apollo_tracing", "tracing",  "chrono", "url", "unblock"] }
eyre = "0.6.5"
derive-new = "0.5.8"
sqlx = { version = "=0.5.9", features = [ "runtime-async-std-native-tls", "postgres", "offline", "json", "macros" , "chrono"], git="https://github.com/D1plo1d/sqlx.git", branch="fix/pgpass" }

tracing = "0.1.28"
tracing-futures = "0.2.4"
arc-swap = "1.1.0"
xactor = { git = "https://github.com/sunli829/xactor.git", branch = "master",  default-features = false, features = ["runtime-async-std", "eyre"] }
async-trait = "0.1.36"
futures = "0.3.12"
nanoid = "0.3.0"
nom-gcode = "0.1.0"
nix = "0.20.0"
# tempfile = "3.2.0"
tempfile = { git = "https://github.com/D1plo1d/tempfile.git", branch = "feature/linux-persistence" }
cgmath = "0.18.0"
lazy_static = "1.4.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dependencies.async-std]
features = ["tokio02", "unstable"]
version = "1.8.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"
