[package]
name = "teg-protobufs"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
prost-build = "0.6.1"

[dependencies]
bitflags = "1.2.1"
prost = "0.6.1"
