[package]
name = "teg_server"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

[[bin]]
name = "teg_server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teg_machine = { path = "../machine" }
teg_auth = { path = "../auth" }
teg_data_channel = { path = "../data_channel" }
teg-json-store = { path = "../json-store" }

serde_json = { version = "1.0.44", features = ["raw_value"] }
async-graphql = { git = "https://github.com/async-graphql/async-graphql.git" }
anyhow = "1.0"
derive-new = "0.5.8"
sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "sqlite", "offline", "json", "macros" ] }
tracing = "0.1.19"
rmp-serde = "0.15.0"
toml = "0.5.8"
url = "2.2.0"
surf = "2.1.0"
arc-swap = "1.1.0"
futures-util = "0.3.8"
bytes = "0.5.6"
dotenv = "0.15.0"
xactor = "0.7.11"

[dependencies.serde]
features = ["derive"]
version = "1.0.104"

[dependencies.async-std]
features = ["tokio02", "unstable"]
version = "1.8.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"
