[package]
name = "printspool-server"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"
build = "build.rs"
default-run = "printspool-server"

[lib]

[[bin]]
name = "printspool-server"
path = "src/bin/server.rs"

[[bin]]
name = "printspool-health-monitor"
path = "src/bin/health_monitor.rs"

[[bin]]
name = "printspool-invite"
path = "src/bin/invite.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
built = { version = "0.4.4", features = ["git2"] }
git2 = "0.13.20"

[dependencies]
printspool-common = { path = "../common"}
printspool_machine = { path = "../machine" }
printspool_material = { path = "../material" }
printspool_auth = { path = "../auth" }
printspool_data_channel = { path = "../data_channel" }
printspool_device = { path = "../device" }
printspool-json-store = { path = "../json-store" }
printspool-print-queue = { path = "../print-queue" }
printspool-driver-interface = { version = "0.1.0", path = "../../crates/driver-interface" }

# async-graphql = { version ="2.8.4", features = ["apollo_tracing", "tracing",  "chrono", "url"] }
async-graphql = { git = "https://github.com/D1plo1d/async-graphql.git", branch="feature/websocket-file-uploads", features = ["apollo_tracing", "tracing",  "chrono", "url", "unblock"] }
async-graphql-warp =  { git = "https://github.com/D1plo1d/async-graphql.git", branch="feature/websocket-file-uploads" }
# async-graphql-warp = { version = "2.6.5" }

serde_json = { version = "1.0.44", features = ["raw_value"] }
derive-new = "0.5.8"
sqlx = { version = "=0.5.9", features = [ "runtime-async-std-native-tls", "postgres", "offline", "json", "macros" , "chrono"], git="https://github.com/D1plo1d/sqlx.git", branch="fix/pgpass" }
# sqlx-core = "=0.5.1"
# sqlx-macros = "=0.5.1"
# sqlx-rt = "=0.3.0"
# pg-embed = { version = "0.6.1", features = ["tokio", "reqwest", "sqlx_async_std"], default-features = false }
# pg-embed = {  git = "https://github.com/D1plo1d/pg-embed.git", branch = "feature/tls-and-async-std", features = ["rt_async_std"], default-features = false }
# pg-embed = { path = "../../../pg-embed", features = ["rt_async_std"], default-features = false }
async-trait = "0.1.36"

tracing = "0.1.28"
tracing-error = "0.1.2"
tracing-subscriber = "0.2.24"
eyre = "0.6.5"
color-eyre = "0.5.10"
rmp-serde = "0.15.0"
toml = "0.5.8"
url = "2.2.0"
surf = "2.1.0"
arc-swap = "1.1.0"
futures-util = "0.3.8"
bytes = "1.1.0"
dotenv = "0.15.0"
xactor = { git = "https://github.com/sunli829/xactor.git", branch = "master",  default-features = false, features = ["runtime-async-std", "eyre"] }
warp = "0.3.0"
nanoid = "0.3.0"
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"
signal-hook = "0.3.8"
nix = "0.20.0"
num_cpus = "1.13.0"
pidfile-rs = { git = "https://github.com/D1plo1d/bsd-pidfile-rs.git", branch = "fix/cross-compilation" }
rand = "0.8.4"
rppal = "0.13.1"
versions = "4.0.0"
dashmap = "4.0.2"
derive_more = "0.99.17"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dependencies.async-std]
features = ["tokio1", "unstable"]
version = "1.8.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"
