[package]
name = "teg_supervisor"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "sqlite", "offline", "json", "macros" ] }
anyhow = "1.0"
serde_json = { version = "1.0.44", features = ["raw_value"] }
async-graphql = "2.2.0"
tracing = "0.1.22"
dotenv = "0.15.0"
notify = "5.0.0-pre.2"
dashmap = "4.0.1"
nix = "0.19.1"
tracing-subscriber = "0.2.15"

[dependencies.async-std]
features = ["tokio02", "unstable", "attributes"]
version = "1.6.3"
