[package]
name = "teg-supervisor"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sqlx = { version = "=0.5.2", features = [ "runtime-async-std-native-tls", "sqlite", "offline", "json", "macros", "chrono" ] }
sqlx = { git = "https://github.com/launchbadge/sqlx.git", branch = "ab/more-pool-fixes", features = [ "runtime-async-std-native-tls", "sqlite", "offline", "json", "macros" , "chrono"] }

eyre = "0.6.5"
serde_json = { version = "1.0.44", features = ["raw_value"] }
async-graphql = { git = "https://github.com/D1plo1d/async-graphql.git", branch="feature/websocket-file-uploads", features = ["apollo_tracing", "tracing",  "chrono", "url", "unblock"] }
tracing = "0.1.25"
dotenv = "0.15.0"
notify = "5.0.0-pre.2"
dashmap = "4.0.1"
nix = "0.19.1"
tracing-subscriber = "0.2.15"

[dependencies.async-std]
features = ["tokio02", "unstable", "attributes"]
version = "1.6.3"
