[package]
name = "klipper-code-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
colored = "2.0.0"
markdown = "0.3.0"
quote = "1.0.23"
rust-format = { version = "0.3.4", features = ["token_stream", "post_process"] }
