[package]
name = "printspool-klipper-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.0"
validator = { version = "0.12.0", features = ["derive"] }
printspool-driver-interface = { version = "0.1.0", path = "../../crates/driver-interface" }
async-trait = "0.1.63"
bonsaidb = "0.4.1"
chrono = "0.4.23"
rand = "0.8.5"
tokio = { version = "1.24.2", features = ["net", "fs"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures-util = "0.3.25"
serde_json = "1.0.91"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"
